--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/ith5cn/express#readme",
   "dependencies": {
     "express": "^4.16.4",
+    "mysql": "^2.17.1",
     "swig": "^1.4.2"
   }
 }
